--- a/views/main_window.glade
+++ b/views/main_window.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkWindow" id="main_window">
@@ -270,6 +270,32 @@
           <packing>
             <property name="x">5</property>
             <property name="y">302</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="friend_request_btn">
+            <property name="label" translatable="yes">Kết bạn / Hủy kết bạn </property>
+            <property name="width-request">130</property>
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+          </object>
+          <packing>
+            <property name="x">282</property>
+            <property name="y">70</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="show_list_friend_btn">
+            <property name="label" translatable="yes">Danh sách bạn bè </property>
+            <property name="width-request">130</property>
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+          </object>
+          <packing>
+            <property name="x">466</property>
+            <property name="y">70</property>
           </packing>
         </child>
       </object>
