--- a/views/main_window.glade
+++ b/views/main_window.glade
@@ -71,7 +71,7 @@
             <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="x">540</property>
+            <property name="x">542</property>
           </packing>
         </child>
         <child>
@@ -90,13 +90,13 @@
         <child>
           <object class="GtkButton" id="logout_btn">
             <property name="label" translatable="yes">Đăng Xuất</property>
-            <property name="width-request">130</property>
+            <property name="width-request">152</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="x">670</property>
+            <property name="x">674</property>
           </packing>
         </child>
         <child>
@@ -129,7 +129,7 @@
         <child>
           <object class="GtkButton" id="group_invite_btn">
             <property name="label" translatable="yes">Mời Vào Nhóm</property>
-            <property name="width-request">173</property>
+            <property name="width-request">130</property>
             <property name="height-request">34</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
@@ -143,28 +143,42 @@
         <child>
           <object class="GtkButton" id="group_info_btn">
             <property name="label" translatable="yes">Thông Tin Nhóm</property>
-            <property name="width-request">174</property>
+            <property name="width-request">130</property>
             <property name="height-request">34</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="x">453</property>
+            <property name="x">414</property>
+            <property name="y">34</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="group_kick_btn">
+            <property name="label" translatable="yes">Xóa khỏi nhóm </property>
+            <property name="width-request">130</property>
+            <property name="height-request">34</property>
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="receives-default">True</property>
+          </object>
+          <packing>
+            <property name="x">559</property>
             <property name="y">34</property>
           </packing>
         </child>
         <child>
           <object class="GtkButton" id="group_leave_btn">
             <property name="label" translatable="yes">Rời Nhóm</property>
-            <property name="width-request">173</property>
+            <property name="width-request">130</property>
             <property name="height-request">34</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="x">627</property>
+            <property name="x">697</property>
             <property name="y">34</property>
           </packing>
         </child>
@@ -214,7 +228,7 @@
         </child>
         <child>
           <object class="GtkScrolledWindow" id="recv_msg_sw">
-            <property name="width-request">640</property>
+            <property name="width-request">670</property>
             <property name="height-request">345</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
@@ -281,7 +295,7 @@
             <property name="receives-default">True</property>
           </object>
           <packing>
-            <property name="x">282</property>
+            <property name="x">281</property>
             <property name="y">70</property>
           </packing>
         </child>
